Fix Epics filter search bar dropdown alignment

--- a/ee/app/assets/stylesheets/pages/epics.scss
+++ b/ee/app/assets/stylesheets/pages/epics.scss
@@ -1,3 +1,17 @@
+@include media-breakpoint-down(sm) {
+  .epics-other-filters .filter-dropdown-container {
+    .epics-sort-btn i {
+      position: absolute;
+      top: 11px;
+      right: 6px;
+    }
+
+    .btn-sort-direction {
+      flex: 0 1 auto;
+    }
+  }
+}
+
 .epic-sidebar {
   .block.date {
     .help-icon,
